--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@dcloudio/uni-mp-weixin": "3.0.0-3061520221228001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3061520221228001",
     "pinia": "^2.0.28",
+    "uni-crazy-router": "^1.1.3",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9"
   },
