--- a/package.json
+++ b/package.json
@@ -50,8 +50,12 @@
     "@dcloudio/uni-mp-toutiao": "3.0.0-3061520221228001",
     "@dcloudio/uni-mp-weixin": "3.0.0-3061520221228001",
     "@dcloudio/uni-quickapp-webview": "3.0.0-3061520221228001",
+    "axios": "^1.2.2",
+    "clipboard": "^2.0.11",
+    "dayjs": "^1.11.7",
     "pinia": "^2.0.28",
     "uni-crazy-router": "^1.1.3",
+    "uview-plus": "^3.1.20",
     "vue": "^3.2.45",
     "vue-i18n": "^9.1.9"
   },
