--- a/package.json
+++ b/package.json
@@ -56,8 +56,7 @@
     "pinia": "^2.0.28",
     "uni-crazy-router": "^1.1.3",
     "uview-plus": "^3.1.20",
-    "vue": "^3.2.45",
-    "vue-i18n": "^9.1.9"
+    "vue": "^3.2.45"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
@@ -82,6 +81,7 @@
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.2",
     "sass": "^1.57.1",
+    "unocss": "^0.48.3",
     "vite": "3.2.4"
   },
   "config": {
