--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "@vue/eslint-config-standard": "^8.0.1",
     "babel-eslint": "^10.1.0",
     "commitizen": "^4.2.6",
-    "cz-customizable": "^7.0.0",
+    "cz-git": "^1.4.1",
     "eslint": "^8.31.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-node": "^11.1.0",
@@ -86,7 +86,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "node_modules/cz-customizable"
+      "path": "node_modules/cz-git"
     }
   },
   "lint-staged": {
