--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "dayjs": "^1.11.7",
     "pinia": "^2.0.28",
     "uni-crazy-router": "^1.1.3",
+    "uni-vite-plugin-h5-prod-effect": "^1.0.1",
     "uview-plus": "^3.1.20",
     "vue": "^3.2.45"
   },
